# connaissance

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  setup-claude-desktop.sh
mcpb/: manifest.json
mcpb/server/: index.js  package-lock.json  package.json
src/connaissance/: __init__.py  cli.py
src/connaissance/commands/: __init__.py  actions.py  audit.py  audit_archive.py  audit_attachments.py  audit_reindex.py  config.py  documents.py  emails.py  emails_cleanup.py  manifest.py  notes.py  optimize.py  organize.py  pipeline.py  scope.py  summarize.py  synthesis.py
src/connaissance/config/: filtres.yaml  scoring-courriels.yaml
src/connaissance/core/: __init__.py  filtres.py  model_selection.py  output_file.py  paths.py  resolution.py  schemas.py  tracking.py
src/connaissance/prompts/: resume_courriel.md  resume_document.md  resume_fil.md  resume_note.md  synthesis_entity.md
